--- a/src/components/imageUploader/ImageUploader.css
+++ b/src/components/imageUploader/ImageUploader.css
@@ -69,8 +69,18 @@ h1 {
   font-size: 20px;
   cursor: pointer;
   color: black;
+  z-index: 1;
 }
-
+.reactions-count {
+  position: absolute;
+  right: 10px;
+  width: 100%;
+  top: 0px;
+  font-size: 20px;
+  cursor: pointer;
+  color: black;
+  background: none;
+}
 .file-name {
   position: absolute;
   bottom: 0px;
