--- a/src/components/imageUploader/ImageUploader.css
+++ b/src/components/imageUploader/ImageUploader.css
@@ -34,6 +34,7 @@ h1 {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.4);
 }
 
 .image-area {
